# ImDFD

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-build.yml  gh-pages.yml
data/: example.dfd  imgui.ini
dfd_editor/: CMakeLists.txt
dfd_editor/dfd_model/: CMakeLists.txt
dfd_editor/dfd_model/include/dfd_model/: DFD.h  DFDElement.h  DataFlow.h  DataItem.h  DataProcess.h  DataStorage.h  Dfd.h  DfdElement.h  DfdNode.h  Element.h  ExternalEntity.h  Serializable.h
dfd_editor/dfd_model/include/dfd_model/data_type/: DataItemType.h  DataType.h
dfd_editor/dfd_model/src/: DFD.cpp  DataFlow.cpp  DataItem.cpp  DataProcess.cpp  DataStorage.cpp  Dfd.cpp  Element.cpp  ExternalEntity.cpp
dfd_editor/dfd_model/test/: CMakeLists.txt  data_item_test.cpp  main.cpp
dfd_editor/include/dfd_editor/: CreateNewNodePopup.h  DataItemPopup.h  DfdManager.h  EditorCanvas.h  InfoWindow.h  MultCanvasWindow.h  NodeEditor.h  NodeEditorWindow.h  NotificationWindow.h
dfd_editor/include/dfd_editor/node_model/: DataProcessingNode.h  DataStorageNode.h  ExternalEntityNode.h  Link.h  Node.h  NodeObj.h  Pin.h
dfd_editor/include/dfd_editor/node_model/data/: ExternalEntity.h
dfd_editor/node_model/: CMakeLists.txt
dfd_editor/node_model/include/node_model/: DataFlowNode.h  DataProcessNode.h  DataProcessingNode.h  DataStorageNode.h  DrawObj.h  ExternalEntityNode.h  Link.h  Node.h  NodeManager.h  NodeObj.h  Pin.h
dfd_editor/node_model/include/node_model/data/: DataFlow.h  DataFlowData.h  DataItem.h  DataItemData.h  DataProcess.h  DataProcessData.h  DataProcessing.h  DataStorage.h  DataStorageData.h  ExternalEntity.h  ExternalEntityData.h
dfd_editor/node_model/include/node_model/element/: DrawObj.h  Link.h  Node.h  Pin.h
dfd_editor/node_model/include/node_model/util/: drawing.h  widgets.h
dfd_editor/node_model/src/: DataProcessNode.cpp  Node.cpp  NodeManager.cpp
dfd_editor/signal/: CMakeLists.txt
dfd_editor/signal/include/signal/: SignalHandel.h
dfd_editor/src/: CreateNewNodePopup.cpp  DataItemPopup.cpp  DfdManager.cpp  EditorCanvas.cpp  InfoWindow.cpp  MutlCanvasWindow.cpp  NodeEditor.cpp  NodeEditorWindow.cpp  NotificationWindow.cpp
dfd_editor/ui/: CMakeLists.txt
dfd_editor/ui/include/ui/: BaseWindow.h
dfd_editor/ui/src/: BaseMenuBar.cpp  BaseWindow.cpp
logging/: CMakeLists.txt
logging/include/: Logger.h  logger.h
logging/include/logging/: Logger.h
logging/src/: Logger.cpp  logger.cpp
logging/test/: CMakeLists.txt  main.cpp
main/: CMakeLists.txt
main/application/: CMakeLists.txt
main/application/include/application/: application.h  platform.h  renderer.h  setup.h
main/application/src/: application.cpp  entry_point.cpp  platform_glfw.cpp  platform_win32.cpp  renderer_dx11.cpp  renderer_ogl3.cpp
main/src/: DearImGui.cpp  DearImGui.h  GLFWMainWindows.cpp  GLFWMainWindows.h  main.cpp
main/src/ui/: ImGuiWindowsInterface.h  NodeEditerDemo.hpp
signal/include/signal/: SignalHandel.h
signal/src/: SignalHandel.cpp
ui/: CMakeLists.txt
ui/include/: BaseMenuBar.h  BaseWindow.h  InfoWindow.h  MainMenuBar.h  Menu.h  NodeEditorWindow.h
ui/include/ui/: BaseMenuBar.h  BasePopup.h  BaseWindow.h  InfoWindow.h  MainMenuBar.h  Menu.h  NodeEditorWindow.h  Widgets.h
ui/src/: BaseMenuBar.cpp  BasePopup.cpp  BaseWindow.cpp  InfoWindow.cpp  MainMenuBar.cpp  Menu.cpp  NodeEditorWindow.cpp  Widgets.cpp
ui/test/: CMakeLists.txt  main.cpp
